--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,14 @@ maven_group = dev.foxgirl.mc
 archives_name = lupin-loadingbackgrounds
 enabled_platforms = fabric,forge
 
+kotlin_version = 2.2.0
+
 minecraft_version = 1.20.1
 minecraft_version_min = 1.20.1
 minecraft_version_max = 1.20.5
 minecraft_version_semver = >=1.20.1 <1.20.5
+
+parchment_mappings = 2023.09.03
 
 architectury_api_version = 9.2.14
 fabric_loader_version = 0.16.14
