--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,10 @@
 pluginManagement {
     repositories {
+        gradlePluginPortal()
+        mavenCentral()
         maven { url 'https://maven.fabricmc.net/' }
         maven { url 'https://maven.architectury.dev/' }
         maven { url 'https://files.minecraftforge.net/maven/' }
-        gradlePluginPortal()
     }
 }
 
