--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs = -Xmx4G
 org.gradle.parallel = true
 
-mod_version = 2.0.0-SNAPSHOT
+mod_version = 2.0.0
 maven_group = dev.foxgirl.mc
 archives_name = lupin-loadingbackgrounds
 enabled_platforms = fabric,forge
@@ -10,8 +10,8 @@ kotlin_version = 2.2.0
 
 minecraft_version = 1.20.1
 minecraft_version_min = 1.20.0
-minecraft_version_max = 1.21.5
-minecraft_version_semver = >=1.20 <1.21.5
+minecraft_version_max = 1.21.2
+minecraft_version_semver = >=1.20 <1.21.2
 
 parchment_mappings = 2023.09.03
 
