--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,19 @@ org.gradle.parallel = true
 mod_version = 2.0.0
 maven_group = dev.foxgirl.mc
 archives_name = lupin-loadingbackgrounds
-enabled_platforms = fabric,forge
+enabled_platforms = neoforge
 
 kotlin_version = 2.2.0
 
-minecraft_version = 1.20.1
-minecraft_version_min = 1.20.0
+minecraft_version = 1.20.2
+minecraft_version_min = 1.20.2
 minecraft_version_max = 1.21.2
-minecraft_version_semver = >=1.20 <1.21.2
+minecraft_version_semver = >=1.20.2 <1.21.2
 
-parchment_mappings = 2023.09.03
+parchment_mappings = 2023.12.10
 
-architectury_api_version = 9.2.14
+architectury_api_version = 10.1.20
 fabric_loader_version = 0.16.14
-fabric_api_version = 0.92.6+1.20.1
-forge_version = 1.20.1-47.4.4
+fabric_api_version = 0.91.6+1.20.2
+forge_version = 1.20.2-48.1.0
+neoforge_version = 20.2.93
