Update to 1.21.2 through 1.21.4, add NeoForge

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -17,10 +17,13 @@ Custom loading screen backgrounds loaded from resource packs
 
 logoFile = "loadingbackgrounds-icon.png"
 
+[[mixins]]
+config = "loadingbackgrounds-mixins.json"
+
 [[dependencies.loadingbackgrounds]]
-modId = "forge"
+modId = "neoforge"
 mandatory = true
-versionRange = "[53,)"
+versionRange = "[21.3,)"
 ordering = "NONE"
 side = "BOTH"
 
