--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.parallel = true
 mod_version = 2.0.0
 maven_group = dev.foxgirl.mc
 archives_name = lupin-loadingbackgrounds
-enabled_platforms = fabric,forge
+enabled_platforms = fabric,forge,neoforge
 
 kotlin_version = 2.2.0
 
-minecraft_version = 1.20.1
-minecraft_version_min = 1.20.0
-minecraft_version_max = 1.21.2
-minecraft_version_semver = >=1.20 <1.21.2
+minecraft_version = 1.21.3
+minecraft_version_min = 1.21.2
+minecraft_version_max = 1.21.5
+minecraft_version_semver = >=1.21.2 <1.21.5
 
-parchment_mappings = 2023.09.03
+parchment_mappings = 2024.12.07
 
-architectury_api_version = 9.2.14
 fabric_loader_version = 0.16.14
-fabric_api_version = 0.92.6+1.20.1
-forge_version = 1.20.1-47.4.4
+fabric_api_version = 0.114.1+1.21.3
+forge_version = 1.21.3-53.1.0
+neoforge_version = 21.3.87
